--- a/css/fuented.css
+++ b/css/fuented.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1b336b;
+    background-color: rgb(8,24 ,73 );
     display: flex;
     justify-content: center;
     align-items: center;
