--- a/css/alineacion.css
+++ b/css/alineacion.css
@@ -1,45 +1,53 @@
 
 .box{
     display: inline-block;
+    letter-spacing: 0.3em;
+    word-spacing: 1em;
+    line-height: 1em;
     width: 200px;
-    height: 250px;
-    text-align: justify;
+    height: 230px;
     color: white;
     margin-top: 2em;
 }
 .Blockquote1{
     font-size: 1.4em;
     background-color: rgb(27, 69, 67);
+    text-align: left;
     margin-right: 10px;
     margin-left: 10px;
     padding: 1em;
-    border:  3px solid darkcyan;
+    border:  6px solid darkcyan;
 }
 .Blockquote2{
     font-size: 1.4em;
+    text-align: right;
     background-color: rgb(21, 80, 52);
     margin-right: 10px;
     padding: 1em;
-    border: 3px dashed black  ;
+    border: 5px dashed black  ;
 }
 .Blockquote3{
     font-size: 1.4em;
+    text-align: center;
     background-color: rgb(46, 44, 93);
     margin-right:  10px;
     padding: 1em;
-    border: 3px dotted rgb(15, 15, 15) ;
+    border: 5px dotted rgb(15, 15, 15) ;
 }
 .Blockquote4{
+    display: inline-block;
     font-size: 1.4em;
+    text-align: justify;
     background-color: rgb(32, 35, 52);
     margin-right:  10px;
     padding: 1em;
-    border: 5px double rgb(240, 234, 234) ;
+    border: 7px double rgb(249, 248, 250) ;
 }
 .Blockquote5{
     font-size: 1.4em;
+    text-indent: 2em;
     background-color: rgb(125, 55, 171);
     margin-right: 5px;
     padding: 1em;
-    border: 3px outset rgb(15, 15, 15) ;
+    border: 6px outset rgb(15, 15, 15) ;
 }
