--- a/css/imagenes2.css
+++ b/css/imagenes2.css
@@ -1,5 +1,5 @@
 .imagen-100{
-    width: 90%;
+    width:580px;
    display: inline;
    margin: 1em;
 }
@@ -27,23 +27,17 @@ p{
     text-align: justify;
     color: rgb(26, 25, 25);
     padding: 1em;
-    width: 85%;
+    width: 400px;
 
-}
-.box{
-    width: 40%;
-    
-}
-.proteinas{
-    display: inline-flex;
 }
 .box{
     border: 3px solid black;
     border-radius: 7px;
     margin: 1em;
-    margin-bottom: 2%;
-    margin-top:2 ;
+    margin-bottom: 20px;
+    margin-top:2px ;
 }
 .png{
-    width:90%;
+    width: 580px;
 }
+  
