--- a/css/imagenes.css
+++ b/css/imagenes.css
@@ -1,13 +1,13 @@
 .imagen-100{
     width: 90%;
    display: inline;
-   margin: 1em;
+   margin: 5%;
 }
 
 h1{
     text-align: center;
     color: black;
-    font-size: 6em;
+    font-size: 4em;
     background-color: burlywood;
     font-family: 'Bebas Neue', cursive;
 }
@@ -26,12 +26,13 @@ h2{
 p{
     text-align: justify;
     color: rgb(26, 25, 25);
-    padding: 1em;
-    width: 85%;
+    padding: 3%;
+    width: 80%;
 
 }
 .box{
-    width: 40%;
+    width: 30%;
+    display: inline-block;
     
 }
 .proteinas{
@@ -41,8 +42,9 @@ p{
     border: 3px solid black;
     border-radius: 7px;
     margin: 1em;
-    margin-bottom: 2%;
-    margin-top:2 ;
+    margin-bottom: 1,5em;
+    margin-top: 1,5em;
+    vertical-align: top;
 }
 .png{
     width:90%;
