--- a/css/imagenes2.css
+++ b/css/imagenes2.css
@@ -1,7 +1,7 @@
 .imagen-100{
-    width:580px;
-   display: inline;
-   margin: 1em;
+    width: 350px;
+   display: inline-block;
+   margin: 20px;
 }
 
 h1{
@@ -10,34 +10,39 @@ h1{
     font-size: 6em;
     background-color: burlywood;
     font-family: 'Bebas Neue', cursive;
+    justify-content: center;
+    align-items: center;
 }
 h2{
     text-align: center;
     color: crimson;
+    align-items: center;
+
     
 }
 .titulo{
     color: darkcyan;
 }
 
-.box-mundo{
-    display: inline-flex;
-}
 p{
     text-align: justify;
     color: rgb(26, 25, 25);
     padding: 1em;
-    width: 400px;
+ 
 
 }
+.proteinas{
+    display: inline-block;
+}
 .box{
+    width: 400px;
+    display: inline-block;
     border: 3px solid black;
     border-radius: 7px;
     margin: 1em;
-    margin-bottom: 20px;
-    margin-top:2px ;
+    vertical-align: top;
 }
 .png{
-    width: 580px;
+    width:300px;
 }
-  
+
