--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,12 @@ h2{
     width: 300px;
     padding:1em;
     margin: 1.5em;
-    background-color: rgb(255, 204, 204);
-    border-style: solid ;
-    border-color: black;
-    border-radius: 4px;
+    background-color: darkcyan;
     text-align: justify;
     font-size: 1.3em;
+    box-shadow:15px 15px 15px rgb(1,77 ,77 ) ;
+    vertical-align: top;
+
 }
 .text2{
     display: inline-block;
@@ -51,12 +51,12 @@ h2{
     width: 300px;
     padding:1em;
     margin: 1.5em;
-    background-color: rgb(255, 204, 204);
-    border-style: solid ;
-    border-color: black;
-    border-radius: 4px;
+    background-color: darkcyan;
     text-align: justify;
     font-size: 1.3em;
+    box-shadow:15px 15px 15px rgb(1,77 ,77 ) ;
+    vertical-align: top;
+
 }
 .text3{
     display: inline-block;
@@ -64,13 +64,10 @@ h2{
     width: 300px;
     padding:1em;
     margin: 1.5em;
-    background-color: rgb(255, 204, 204);
-    border-style: solid ;
-    border-color: black;
-    border-radius: 4px;
+    background-color: darkcyan;
     text-align: justify;
     font-size: 1.3em;
-}
-nav{
-    display: inline;
+    box-shadow:15px 15px 15px rgb(1,77 ,77 ) ;
+    vertical-align: top;
+
 }
