--- a/css/shandow.css
+++ b/css/shandow.css
@@ -3,15 +3,18 @@
     height: 260px;
     margin: 1em;
     box-shadow: 15px 15px 15px black;
-    border-radius: 3px;
+    border-radius: 7px;
+    border: 1PX solid ;
 }
 .pyramiid{
-    display: inline-flex;
-    margin-left: 65vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hilera{
-    display: inline-flex;
-    margin-left: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 p{
     display: flex;
@@ -24,6 +27,9 @@ p{
     background-color: rgb(68, 68, 68);
     box-shadow: 15px 15px 15px rgb(38, 35 ,40);
     margin-left: 92vh;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 .box2{
     background-color:darkcyan ;
