--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,46 @@ h2{
     vertical-align: top;
 
 }
+
+
+ul,ol{
+    list-style: none;
+}
+.nav li a{
+    background-color: rgb(60, 50, 60);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    padding: 19px 25px;
+    display: block;
+}
+.nav li a:hover{
+    background-color: black;
+
+}
+.nav li {
+    float: left;
+    
+    
+    
+}
+.nav li ul{
+    display: none;
+    position: absolute;
+    min-width: 140px;
+
+}
+.nav li:hover>ul{
+    display: block;
+}
+.nav li ul li{
+    position: relative;
+}
+.nav li ul li ul{
+    left: 140px;
+    top:0px;
+    
+}
+
 .perfil{
     width: 100%;
     background: rgb(192, 163, 130);
@@ -88,7 +128,7 @@ h2{
     float: left;
     
 }
-nav{
+/*nav{
     height: 100%;
     color: rgb(7, 7, 7);
 }
@@ -109,7 +149,7 @@ nav>ul>li{
     
     
 
-}*/
+}
 nav>ul>li>.menu2>li>a{
     width: 100%;
     height: 100%;
@@ -119,7 +159,7 @@ nav>ul>li>.menu2>li>a{
    list-style: none;
    float: left;
    display: none;
-}*/
+}
 
 .menu2{
     display: inline-flex;
@@ -128,21 +168,21 @@ nav>ul>li>.menu2>li>a{
     list-style: none;
     float: left;
     display:none
-}*/
+}
 a, .menu{
     text-decoration: none;
     list-style: none;
     float: left;
     display: block;
 
-}*/
+}
 .menu{
     color: black;
     list-style: none;
     float: none;
     display: block;
 
-}*/
+}
 .menu:hover{
     background: #f6f6f6;
     border-radius: 3px;
@@ -156,19 +196,19 @@ a, .menu{
     font-weight: 300;
     display:block;
 }
-
-.row3>li{
+.row3>li a{
     float: left;
     display: none;
 }
+
 nav > .row3>.menu2>.menu1{
     float: left;
     display: block;
 }
-nav > .row3>.menu2>.menu1>.menu:hover{
+nav > .row3:hover{
     background-color: cadetblue;
     float: left;
-    display: none;
+    display: block;
     
 }
 .row3 :hover{
@@ -181,7 +221,7 @@ nav > .row3>.menu2>.menu1>.menu:hover{
 nav> ul>li>ul>.menu1>.menu{
     float: left;
     display: block;
-}
+}*/
 /*
 .row1 :hover{
     background-color: rgb(167, 118, 27);
