--- a/css/menu_iconos.css
+++ b/css/menu_iconos.css
@@ -1,17 +1,27 @@
 *{
     padding: 0%;
     margin: 0px;
+    box-sizing: border-box;
 }
 
 .icons_style{
-  color: rgb(64, 64, 64.8);
+  color: rgb(13, 13, 14);
   font-size: 100%;
   padding-right: 5px;
 }
+.iconos{
+    padding: 10px 10px 25px 10px;
+}
 nav{
-    background-color: aliceblue;
+    background-color: rgb(250, 250, 250);
     height: 100vh;
-    width: 300px;
+    width: 200px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 1px solid;
+    border-bottom: none;
+    border-top: none;
 }
 ul{
     list-style: none;
@@ -19,3 +29,30 @@ ul{
 a{
     text-decoration: none;
 }
+.one{
+    padding-top: 20px;
+}
+.cont-menu{
+    width: 100%;
+    max-width: 250px;
+    background:white;
+    height: 100vh;
+    position: relative;
+    transition: all 500ms ease ; 
+}
+.cont-menu nav li{
+    display: block;
+    text-decoration: none;
+    padding: 10px;
+    color: #202020;
+    transition: all 400ms ease;
+}
+.cont-menu nav li:hover{
+    background: rgb(233, 230, 230);
+    font-size: 105%;
+    width: 98%;
+    color: rgb(10, 10, 10);
+    border-radius: 2px;
+
+}
+
