--- a/css/media-query.css
+++ b/css/media-query.css
@@ -11,7 +11,7 @@ nav{
     width: 100%;
     height: 80px;
 }
-ul{
+.main-menu{
     
     text-align: right;
     list-style: none;
@@ -54,7 +54,7 @@ li:hover{
 }
 
 @media  only screen and  (max-width:1152px){
-     nav{
+     nav{ 
         background-color: rgb(26, 26, 26);
         position: fixed;
         margin-top: 0;
@@ -69,15 +69,19 @@ li:hover{
         text-align: center;
         border-bottom: 1px solid white;
     }  
-     .bar-menu{
+     .bar-menu {
         
         visibility: visible;  
     } 
-     ul{
-      
+    .main-menu-visible {
         background-color: rgba(80, 80, 80, 0.9);
         margin-top: 80px;
         padding: 0;
+        display: block;
+    }
+    .main-menu{
+        display: none;
+        
     } 
     li:hover{
         background-color: rgb(48,48,48,.9);
