--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,81 @@ h2{
 }
 .icons_style{
     color: rgb(254, 254, 255);
+    padding: 5px;
     
 }
-ul,ol{
+nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    font-size: 1.3em;
+    background-color: rgb(12, 12, 12);
+    
+}
+
+li{ 
+    color: white;
+}
+nav ul{
+    
+    list-style: none;
+    padding: 0;
+    display: table;
+    display: block;
+    position: absolute;
+    width: 100%;
+    background-color: rgb(10, 10, 10);
+   
+    
+}
+nav a{
+    text-decoration: none;
+    display: block ;
+    padding: 0 3em;
+    color: white;
+    border: 1px solid white;
+    
+}
+/*menu primer nivel*/
+nav > ul > li{
+    float: left;
+    width: 384px;
+    line-height: 70px;
+    text-align: center;
+    
+}
+nav li{
+    position: relative;
+    
+    
+    
+}
+a:hover {
+    background-color: rgb(48, 168, 168);
+    color: white;
+}
+
+nav li li{
+    max-height: 0;
+    overflow: hidden;
+}
+nav li:hover > ul > li{
+   visibility: visible;
+   max-height: 500px;
+   overflow: visible;
+}
+nav ul ul ul{
+    left: 100%;
+    top: 0;
+}
+.icon_style{
+    margin: 1em;
+    color: white;
+    font-size: 15px;
+}
+/* ul,ol{
     list-style: none;
 }
 .nav li a{
@@ -135,75 +207,13 @@ ul,ol{
     height: 80vh;
     
 }
-/*nav{
-    height: 100%;
-    color: rgb(7, 7, 7);
-}
-nav>ul{
-    height: 100%;
-    display: inline-flex;
-    text-decoration: none;
-    list-style: none;
-    
-}
-
-nav>ul>li{
-    height: 100%;
-    list-style: none;
-    text-decoration: none;
-    position: relative;
-    float: left;
-    
-    
-
-}
-nav>ul>li>.menu2>li>a{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    color:white;
-   list-style: none;
-   float: left;
-   display: none;
-}
-
-.menu2{
-    display: inline-flex;
-    text-align: center;
-    text-decoration: none;
-    list-style: none;
-    float: left;
-    display:none
-}
-a, .menu{
-    text-decoration: none;
-    list-style: none;
-    float: left;
-    display: block;
-
-}
-.menu{
-    color: black;
-    list-style: none;
-    float: none;
-    display: block;
-
-}
-.menu:hover{
-    background: #f6f6f6;
-    border-radius: 3px;
-    font-size: 1em;
-    float: left;
-    display: block;
-}*/
 .row3, .row2, .row1{
     font-size: 150%;
     color: rgb(253, 249, 249);
     font-weight: 300;
     display:inline-block;
-    border: 1px solid black;
-    background-color: black;
+    /* border: 1px solid black; */
+ /*    background-color: black;
     width: 20%;
     border-radius: 2px;
     text-align: center;
@@ -226,38 +236,51 @@ a, .menu{
 .menu1:hover{
     background-color: gray;
     box-shadow: 3px 3px 3px;
+} */ */
+.bar-menu{
+    position: fixed;
+    top: 20px;
+    right: 30px;
+     color: white;
+     visibility: hidden;
+     font-size: 1.5em; 
 }
-
-/*.row3>li a{
-    float: left;
-    display: none;
-}
-
-nav > .row3>.menu2>.menu1{
-    float: left;
-    display: block;
-}
-nav > .row3:hover{
-    background-color: cadetblue;
-    float: left;
-    display: block;
+@media only screen and (max-width=1152px) {
+    .bar-menu{
+        visibility: visible;
+    }
+    nav{
+        position: fixed;
+        margin-top: 0;
+        width: 100%;
+        height: 80px;
+    }
+    li{
+        width: 100%;
+        display: block;
+        line-height: 70px;
+        padding: 0;
+        text-align: center;
+        border-bottom: 1px solid white;
+    }  
+     .bar-menu {
+        
+        visibility: visible;  
+    } 
+    .main-menu-visible {
+        background-color: rgba(80, 80, 80, 0.9);
+        margin-top: 80px;
+        padding: 0;
+        display: block;
+    }
+    .main-menu{
+        display: none;
+        
+    } 
+    li:hover{
+        background-color: rgb(48,48,48,.9);
+    } 
     
 }
-.row3 :hover{
-    background-color: cadetblue;
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: block;
 
-}
-nav> ul>li>ul>.menu1>.menu{
-    float: left;
-    display: block;
-}*/
-/*
-.row1 :hover{
-    background-color: rgb(167, 118, 27);
-    width: 15px;
-    box-shadow: 8px 8px 10px rgb(73, 51, 9);
-}*/
 
