--- a/css/background.css
+++ b/css/background.css
@@ -1,33 +1,57 @@
 
 *{
-    margin: 0;
+    margin: 0%;
     padding: 0;
 }
-.box-main{
+body{
     background-image: url(../img/fondobackgound.jpg);
-     width: 100%;
-    height: 100vh; 
-   
+    width: 100%;
     background-size: cover;
-    background-repeat: no-repeat    ;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    /* background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;  */
+    background-position: right center;
+}
+nav{
+    position: absolute;
+    margin-top: 15px;
+    padding-bottom: 20px;
+    background-color: rgba(211, 240, 241,0.4);
+
+    width: 100%;
+    
+    border-radius: 7px;
+    border: 1 solid black;
+    
 }
 ul{
     width: 100%;
     text-align: right;
     height: 80px;
-    padding-right: 60px;
+    padding-right: 0px;
+   
 }
 li{
-    padding: 35px 45px;
+    padding: 35px 40px;
     color: rgb(19, 18, 18);
     font-size: 1.4em;
     display:inline-block;
     font-weight: 900;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    cursor: pointer;
+}
+a{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(19, 18, 18);
+    font-size:1.4 ;
+    font-weight: 900;
+    text-decoration: none;
+}
+.icons_style{
+    color: rgb(27, 27, 27);
+    margin-right: 10px;
+}
+li:hover{
+    background-color: rgba(211, 240, 241,0.9);
 }
 .last-item{
     margin-right: 80px;
