--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ ul,ol{
        position: absolute;
        top: 0;
        left: 0;
-       right: 0;
+       right: 0cd;
         display: block;
         width: 100%;
         margin-right: 20px;
