--- a/css/flex-box.css
+++ b/css/flex-box.css
@@ -83,7 +83,7 @@ h2{
     align-items: flex-start; 
 }
 .box44{
-    height: 480px;
+    height: 450px;
 }
 .box45{
     height: 210px;
@@ -101,7 +101,7 @@ h2{
     
 }
 .box-box-aling{
-    width: 130px;
+    width: 120px;
     background-color: cornflowerblue;
     margin-bottom: 0;
     justify-content: center;
@@ -130,12 +130,52 @@ h2{
     justify-content: center;
 }
 .texto-grafica{
-    transform: rotate(-90deg);
+    writing-mode:vertical-lr;
+    transform: rotate(180deg);
     font-size: 1.5em;
-    margin-top: 250px;
-   /*  background-color: brown;
-    height: 30px;
-    width: 500px;
-     */
+    padding-left: 5px;
+    text-align: center;
+}
+ .pal{
+    color: black;
+    font-size: 1em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+} 
+.lineas{
+    border-bottom: 1.5px dashed rgb(221, 219, 219);
+    position: absolute;
+    margin-bottom: 60px;
+    z-index: -1;
+    width: 750px;
+}
+.one{
+    margin-bottom: 350px;
+}
+.two{
+    margin-bottom: 210px;
+}
+.three{
+    margin-bottom: 390px;
+}
+.four{
+    margin-bottom: 280px;
+}
+.p1{
+    padding-right: 560px ;
+}
+.p2{
+    padding-right: 280px ;
+}
+.p3{
+    text-align: center;
+    padding-left: 280px; 
 
+}
+.p4{
+    text-align: center;
+    padding-left: 570px;
+}
+.p5{
+    text-align: center;
+    
 }
