--- a/css/calendario.css
+++ b/css/calendario.css
@@ -49,3 +49,25 @@
 .dom{
     background-color: rgb(236, 195, 90);
 }
+@media only screen and (max-width:1152px){
+    .box-main-day{
+        grid-template-columns: repeat(7,150px); 
+        /* margin-left: 20px; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }  
+    .day{
+        font-size: 1.5em;
+        padding: 0px 30px;
+    }
+    .box-main-week{
+        grid-template-columns: repeat(7,150px); 
+        
+        display: flexbox;
+    }
+    .day-week{
+        font-size: 1.5em;
+       /*  padding: 0px 25px; */
+    }
+}
