--- a/css/calendario.css
+++ b/css/calendario.css
@@ -1,73 +1,129 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.mes{
+
+.mes {
     font-family: 'Sassy Frass', cursive;
-    font-size: 150px; 
+    font-size: 150px;
     font-weight: 600;
-    width: 100%; 
     color: rgb(48, 48, 48.8);
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 15px 9px goldenrod;
 }
-.box-main-day{
-    display: grid;
-    grid-template-columns: repeat(7,250px);
+
+.box-main-day {
+    display: flex;
+    justify-content: center;
+    grid-template-columns: repeat(7, 250px);
     margin: 100px;
+    gap: 20px;
 }
-.day{
-    border: 1.5px solid rgb(44,44,44.5);
+
+.day {
+    border: 1.5px solid rgb(44, 44, 44.5);
     box-shadow: 2px 0px 5px gray;
     display: flex;
+    width: 800px;
     justify-content: center;
     align-items: center;
-    font-size: 1.5em;   
+    font-size: 2em;
+    border-radius: 100px;
+    background-color: rgb(242, 204, 106);
 }
-.day-week{
-    border: 1.5px solid rgb(44,44,44.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5em;     
+
+.day-week {
+    border: 1.5px solid rgb(44, 44, 44.5);
+    padding: 30px;
+    font-size: 1.5em;
+    border-radius: 50% 20% /10% 40%;
+    margin: 5.5px;
+    box-shadow: 2px 2px 8px black;
 }
-.day-week:hover{
-    background-color: bisque;
-}
-.box-main-week{
+
+
+
+.box-main-week {
     display: grid;
-    grid-template-columns: repeat(7,250px);
-    grid-template-rows: repeat(5,200px);
-    margin: 100px;
+    justify-content: center;
+    grid-template-columns: repeat(7, 245px);
+    grid-template-rows: repeat(5, 200px);
 }
-.one{
-    grid-column-start: 4; 
+
+.one {
+    grid-column-start: 4;
     grid-column-end: 5;
 }
-.dom{
+
+.dom {
     background-color: rgb(236, 195, 90);
 }
-@media only screen and (max-width:1152px){
-    .box-main-day{
-        grid-template-columns: repeat(7,150px); 
-        /* margin-left: 20px; */
+
+.festivo {
+    text-align: end;
+    position: relative;
+    top: 65px;
+}
+@media only screen and (max-width:1400px){
+    .mes{
+        font-size: 5em;
+    }
+    .box-main-day {
+        margin: 40px;
+    }
+    .box-main-week {
+        grid-template-columns: repeat(7, 175px);
+        grid-template-rows: repeat(5, 110px);
+    }
+    
+    .festivo {
+        display: none;
+    }
+    
+}
+
+@media only screen and (max-width:767px) {
+    .mes {
+        font-size: 95px;
+    }
+
+    .box-main-day {
         display: flex;
         justify-content: center;
-        align-items: center;
-    }  
-    .day{
-        font-size: 1.5em;
-        padding: 0px 30px;
+        grid-template-columns: repeat(7, 250px);
+        margin: 50px;
+        gap: 6px;
     }
-    .box-main-week{
-        grid-template-columns: repeat(7,150px); 
-        
-        display: flexbox;
+
+    .day {
+        width: 43px;
     }
-    .day-week{
-        font-size: 1.5em;
-       /*  padding: 0px 25px; */
+
+    .dias {
+        width: 70px;
+        padding: 5px;
+        font-size: 30px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .box-main-week {
+        grid-template-columns: repeat(7, 50px);
+        grid-template-rows: repeat(5, 95px);
+    }
+    .day-week {
+        padding: 7px;
+       
+    }
+    .festivo {
+        display: none;
+    }
+    
+}
+
+@media only screen and (min-width:1381px){
+    .day-week:hover {
+        background-color: bisque;
     }
 }
