--- a/css/maqueta2.css
+++ b/css/maqueta2.css
@@ -3,9 +3,10 @@
     grid-template: "cabeza        empty         empty" 150px
                     "imagen-prin  imagen-prin  imagen-prin"500px
                     "aticulo1     aticulo2      aticulo3" 400px
-                    "txt-art1     txt-art2      txt-art3" 400px/
-                    600px; 
-    grid-gap: 40px;             
+                    "txt-art1     txt-art2      txt-art3" 500px/
+                     400px        400px         400px; 
+    grid-gap: 40px; 
+           
 }
 .header{
     grid-area: cabeza;
@@ -33,6 +34,8 @@
 .texto-articulo{
     border: 1px solid black;
     border-radius: 40px;
+    
+
 }
 .art1{
     grid-area: txt-art1;
@@ -52,7 +55,8 @@
     font-size: 1.5em;
 }
 .txt{
-    padding: 20px;
+    padding: 5px;
     font-size: 1.8em;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+media
