--- a/css/style.css
+++ b/css/style.css
@@ -1,301 +1,152 @@
-h1 {
-    display: flex;
-    margin: auto;
-    text-align: center;
-    justify-content: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 450%;
-    color: #ff0000;
-    padding: 0.5%;
-    
-    
-}
-.imagen{
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    margin: auto;
-    border-radius: 50%;
-    box-shadow: 15px 15px 15px rgb(1,77 ,77 );
-}
-.perfil{
-   
-    font-size: 100%;
-    margin: auto;
+*{
+    margin: 0;
+    padding: 0;
 }
 body{
-    background-color:rgb(209, 193, 193) 
+    background-color: #727272;
+} 
+.menu_bar{
+    display:none; 
 }
-p{
-    font-size: 200%;
-    text-align: justify;
-    margin: auto;
+nav{
+    background-color: #023859;
+    width: 100%;
 }
-h2{
+ul{
+    list-style: none;
+    text-align: right;
+}
+li{
+    display: inline-block;
+    position: relative;
+}
+nav ul li:hover{
+    background-color: #4e7288;
+   
+}
+nav ul li a{
+    display: block;
+    color: white;
+    font-size: 1.3em;
+    text-decoration: none;
+    padding: 20px;
+}
+.children{
+    position: absolute;
+    display: none;
+    background-color: #011826;
+    text-align:left;
+}
+nav ul li:hover .children{
+    display: block;
+    width: 100%; 
+    text-align: left;
+}
+nav ul li .children li{
+    overflow: hidden;
+    display: block;
+    border-bottom: 1px solid rgb(255,255,255,.9);
+}
+nav ul li .children li a{
+    display: block;
+}
+.box-center{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Oswald', sans-serif;
-    font-size: 3em;
+    margin: auto;
+    margin-top: 20px;
+    background: var(--color);
+    aspect-ratio: 10/16;
+    width: 400px;
+    height: 500px;
+    padding: 9px;
+    border-radius: 16px;
+    position: relative; 
 }
-.text1{
-    display: inline-block;
-    height: 200px;
-    width: 300px;
-    padding:1em;
-    margin: 1.5em;
-    margin: 1.5em;
-    background-color: darkcyan;
-    border-radius: 7px;
-    text-align: justify;
-    font-size: 1.3em;
-    box-shadow:15px 15px 15px rgb(1,77 ,77 ) ;
-    vertical-align: top;
-
-}
-.text2{
-    display: inline-block;
-    height: 200px;
-    width: 300px;
-    padding:1em;
-    margin: 1.5em;
-    background-color: darkcyan;
-    text-align: justify;
-    font-size: 1.3em;
-    box-shadow:15px 15px 15px rgb(1,77 ,77 ) ;
-    border-radius: 7px;
-    vertical-align: top;
-
-}
-.text3{
-    display: inline-block;
-    height: 200px;
-    width: 300px;
-    padding:1em;
-    margin: 1.5em;
-    background-color: darkcyan;
-    border-radius: 7px;
-    text-align: justify;
-    font-size: 1.3em;
-    box-shadow:15px 15px 15px rgb(1,77 ,77 ) ;
-    vertical-align: top;
-
-}
-.icons_style{
-    color: rgb(254, 254, 255);
-    padding: 5px;
-    
-}
-/* nav{
-    position: fixed;
-    top: 0;
-    left: 0;
+.cuerpo{
+    background: var(--fondo);
     width: 100%;
-    height: 80px;
-    font-size: 1.3em;
-    background-color: rgb(12, 12, 12);
-    
+    height: 100%; 
+    border-radius: 12px;
+} 
+.logo{
+    margin: auto;
+    margin-top: 20px;
+    width: 300px;
+    border-radius: 100%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-li{ 
-    color: white;
-}
-nav ul{
-    
-    list-style: none;
-    padding: 0;
-    display: table;
-    display: block;
-    position: absolute;
-    width: 100%;
-    background-color: rgb(10, 10, 10);
-   
-    
-}
-nav a{
-    text-decoration: none;
-    display: block ;
-    padding: 30px;
-    color: white;
-    border: 1px solid white;
-    
-}
-/*menu primer nivel*/
-/*nav > ul > li{
-    float: left;
-    width: 384px;
-    line-height: 70px;
+h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2em;
+    font-size: 900;
+    color: rgb(241, 227, 208);
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
     text-align: center;
-    
 }
-nav li{
-    position: relative;
-    
-    
-    
+button{
+    background-color: #1d78b0;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 6px;
+    border-radius: 26px;
+    height: 50px;
+    width: 100px;
 }
-a:hover {
-    background-color: rgb(48, 168, 168);
+button{
+    display: flex;
+    margin-top: 60px;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 60px;
+    background-color:#011826;
     color: white;
-}
-
-nav li li{
-    max-height: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: bolder;
+    border:none;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: .3s ease all;
+    border-radius: 5px;
+    position: relative;
     overflow: hidden;
 }
-nav li:hover > ul > li{
-   visibility: visible;
-   max-height: 500px;
-   overflow: visible;
+button::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #1d78b0;
+    position: absolute;
+    top:-80px ;
+    left: 0;
+    z-index: 1;
+    transition: .3s ease-in-out all;
 }
-nav ul ul ul{
-    left: 100%;
+
+button a{
+    position: relative;
+    z-index: 2;
+    transition: .3s ease all;
+    text-decoration: none;
+}
+button:hover::after{
     top: 0;
 }
-.icon_style{
-    margin: 1em;
-    color: white;
-    font-size: 15px;
-} */
- nav{
-    padding: 35px 45px;
-    width: 100%;
-    height: 80px;
-    color: rgb(19, 18, 18);
-    
-    display:inline-block;
-    
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    cursor: pointer;
- }
-ul,ol{
-    list-style: none;
+:root{
+    --color: linear-gradient(
+        to right,
+        tomato 0%,
+        gold 100%
+    );
+    --fondo: #222;
 }
-.nav li a{
-    background-color: rgb(60, 50, 60);
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    padding: 19px 25px;
-    width: 200px;
-    border: 1px solid black;
-    border-radius: 4px;
-    
-}
-
-.nav li a:hover{
-    background-color: black;
-}
-.nav li a {
-    float: left;
-      
-}
-.nav li ul{
-    display: none;
-    position: absolute;
-    min-width: 140px;
-
-}
-.nav li:hover>ul{
-    display: block;
-}
-.nav li ul li{
-    position: relative;
-}
-.nav li ul li ul{
-    left: 150px;
-    top:0px;
-    position: absolute;
-    
-}
-
-.perfil{
-    width: 100%;
-    
-    padding: 0px;
-    float: left;  
-}
-.perfil:hover{
-    height: 80vh;
-    
-}
-.row3, .row2, .row1{
-    font-size: 150%;
-    color: rgb(253, 249, 249);
-    font-weight: 300;
-    display:inline-block;
-    border: 1px solid black; 
-    background-color: black;
-    width: 20%;
-    border-radius: 2px;
-    text-align: center;
-
-}
-.row3:hover{
-    background-color: rgb(71, 70, 70);
-   
-    color: white;
-}
-.menu1{
-    border: 1px solid black;
-    width: 60%;
-    background-color: rgb(31, 30, 30);
-    color: rgb(250, 246, 246);
-    padding: 2%;
-    display: block;
-    position: relative;
-    border-radius: 3px;
-}
-.menu1:hover{
-    background-color: gray;
-    box-shadow: 3px 3px 3px;
-}  
-.bar-menu{
-    position: fixed;
-    top: 20px;
-    right: 30px;
-     color: white;
-     visibility: hidden;
-     font-size: 1.5em; 
-}
-@media  only screen and  (max-width:1152px){
-    .bar-menu {
-        
-        visibility: visible;  
-    } 
-    nav{ 
-        background-color: rgb(26, 26, 26);
-        position: fixed;
-        margin-top: 0;
-        width: 100%;
-        height: 80px;
-    } 
-     .nav{
-       position: absolute;
-       top: 0;
-       left: 0;
-       right: 0cd;
-        display: block;
-        width: 100%;
-        margin-right: 20px;
-
-    }
-    .row1,.row2,.row3{
-        
-        font-size: 15px;
-        width: 100%;
-        display: block;
-        line-height: 40px;
-        text-align: center;
-        border-bottom: 1px solid white;
-    }
-    .nav li ul li ul{
-        left: 80px;
-        top:0px;
-        position: absolute;
-        
-    }
-    
-}
-
-
-
