--- a/css/maqueta2.css
+++ b/css/maqueta2.css
@@ -1,10 +1,10 @@
 .mainbox{
     display: grid;
-    grid-template: "cabeza        empty         empty" 150px
-                    "imagen-prin  imagen-prin  imagen-prin"500px
-                    "aticulo1     aticulo2      aticulo3" 400px
-                    "txt-art1     txt-art2      txt-art3" 500px/
-                     400px        400px         400px; 
+    grid-template:  "empty-left   cabeza        empty         empty      empty-rigth" 200px
+                    "empty-left   imagen-prin   imagen-prin  imagen-prin empty-rigth"500px
+                    "empty-left   aticulo1      aticulo2      aticulo3   empty-rigth" 400px
+                    "empty-left   txt-art1      txt-art2      txt-art3   empty-rigth" /
+                    1fr            30%          30%           30%        1fr; 
     grid-gap: 40px; 
            
 }
@@ -34,8 +34,6 @@
 .texto-articulo{
     border: 1px solid black;
     border-radius: 40px;
-    
-
 }
 .art1{
     grid-area: txt-art1;
@@ -59,4 +57,7 @@
     font-size: 1.8em;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-media
+@media only screen and (max-width:1050px){
+
+}
+
