--- a/css/carrito_compras.css
+++ b/css/carrito_compras.css
@@ -7,7 +7,8 @@
    margin-bottom: 40px;
 }
 nav{
-    display: inline-block;
+    display: flex;
+   
 }
 ul{
     display: flex;
@@ -16,7 +17,6 @@ li{
     list-style: none;
     padding: 20px;
     margin:5px;
-    background-color: white;
     font-family: 'Times New Roman', Times, serif;
     font-size: 0.9em;
 }
@@ -26,6 +26,16 @@ li:hover{
 a{
     text-decoration: none;
     color: gray;
+}
+.shopping-car{
+    list-style: none;
+    padding: 20px;
+    margin:5px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 0.9em;
+}
+.lado{
+    margin: 0 1250px ;
 }
 h1{
     text-align: center;
@@ -79,6 +89,7 @@ h1{
 .cant-box{
     display: flex;
    flex-direction: row;
+   margin: 0 70px;
 } 
 .icon-po{
     width: 50px;
@@ -106,4 +117,32 @@ h1{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     cursor: pointer;
+}
+.confir-compra{
+    margin: 0 15px;
+    display: flex;
+    text-align: center;
+    background-color: #f07313;
+    border-radius: 10px;
+    border: solid 1px black;
+    height: 50px;  
+}
+.confir-compra:hover{
+    background-color: #eca976;
+    border: none;
+    border-radius: 40px 10px;
+    
+    transition: all 0.5s;
+}
+.text-com{
+    color: white;
+    margin: 2px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5em;
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.espacio{
+    margin: 10px;
 }
