--- a/css/carrito_compras.css
+++ b/css/carrito_compras.css
@@ -1,5 +1,7 @@
 *{
     font-family: Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 .menu{
    border-bottom: 0.7px solid rgb(197, 196, 196);
@@ -28,6 +30,7 @@ a{
     color: gray;
 }
 .shopping-car{
+  
     list-style: none;
     padding: 20px;
     margin:5px;
@@ -89,8 +92,19 @@ h1{
 .cant-box{
     display: flex;
    flex-direction: row;
-   margin: 0 70px;
+    margin: 0 70px;
+}
+.valor-pro{
+    display: flex;
+    flex-direction: row; 
 } 
+.precio{
+    margin-left: 78px;
+    font-size: 2em;
+    font-weight: bolder;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 2px;
+}
 .icon-po{
     width: 50px;
     height: 50px;
@@ -117,6 +131,9 @@ h1{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     cursor: pointer;
+}
+.buy-box{
+    margin: 0 15px;
 }
 .confir-compra{
     margin: 0 15px;
@@ -145,4 +162,101 @@ h1{
 }
 .espacio{
     margin: 10px;
+}
+.product-add{
+    position: absolute;
+    top:5%;
+    right: 0;
+    left: 91%;
+    border: solid 2px black;
+    background-color: #f07313;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    visibility: hidden;    
+}
+.product-add-activo{
+   /*  position: absolute;
+    top:5%;
+    right: 0;
+    left: 91%; */
+    border: solid 1px black;
+    background-color: #f07313;
+    border-radius: 100%;
+    width: 12px;
+    height: 18px; 
+    visibility: visible;    
+}
+
+#Product-add{
+    color: rgb(10, 10, 10);
+    font-size: 18px;
+    padding: 3px;
+    
+}
+.lighbox{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(64,64,64,.9);
+    width: 100%;
+    height: 100vh;
+}
+.main-lighbox{
+    width: 450px;
+    height: 600px;
+  /*   background-color: red; */ 
+}
+
+.btn-style{
+    border-radius: 50%;
+    width: 46px;
+    height: 46px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(24,24,24);
+    position: relative;
+    top:198px;
+}
+.ligh-hidden{
+    display: none;
+}
+.btn-adelante{
+    left:95%;
+    z-index: 20;
+    top:152px
+}
+.btn-atras{
+    left: -25px;
+    z-index: 20;
+}
+.btn-cerrar{
+    top: 0;
+    left: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3em
+}
+.style-btn{
+    font-weight: 900;
+    font-size: 1.3em;
+}
+.img-main-ligh{
+    position: relative;
+    top: -88px;
+    width: 100%;
+    border-radius: 20px;
+    z-index: 10;
+}
+.img-box-main-big{
+    display: grid;
+    width: 100%;
+    grid-template:"img-box     img-box       img-box       img-box    img-box      img-box    img-box" 475px
+                  "empty-0     empty-0       empty-0       empty-0    empty-0      empty-0    empty-0" 30px
+                  "box-img-1   empty-1       box-img-2     empty-2    box-img-3    empty-3    box-img-4" 90px/ 
+                   105px       20px          105px         20px       105px        20px       105px
 }
