--- a/css/carrito_compras.css
+++ b/css/carrito_compras.css
@@ -5,24 +5,28 @@
 }
 
 .menu {
-    /* position: fixed ;
-    top: 0; */
-    border-bottom: 0.7px solid rgb(197, 196, 196);
-    width: 100%;
+    display: flex;
+    justify-content: center; 
+    width: 80%;
     height: 80px;
-    margin-bottom: 20px;
     background-color: white;
-    
+    /* margin-left: 100px; */
 }
 
-nav {
+.linea{
+    border-bottom: 0.7px solid rgb(197, 196, 196);
+    width: 60%; 
     display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
 ul {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;  
+    
 }
 
 li {
@@ -34,7 +38,7 @@ li {
 }
 
 li:hover {
-    border-bottom: 2px solid rgb(255, 125, 26);
+    border-bottom: 1.5px solid rgb(255, 125, 26);
 }
 
 a {
@@ -44,7 +48,7 @@ a {
 
 .shopping-car {
     position: relative;
-    left: 90%;
+    left: 50%;
     list-style: none;
     padding: 20px;
     margin: 5px;
@@ -57,18 +61,21 @@ a {
 
 .img-avatar {
     z-index: 0;
-    width: 45px;
+    width: 35px;
     border-radius: 100%; 
     position: relative;
-    left: 90%;
+    left: 50%;
     text-align: right;
 }
 .img-avatar:hover{
-    border:solid 3px rgb(255, 125, 26);
+    border:solid 2px rgb(255, 125, 26);
 }
-
-
-
+.logo{
+    font-size: 2em;
+    font-weight: 900;
+    color: black;
+   
+}
 .lado {
     display: flex;
     justify-content: last baseline;
@@ -83,10 +90,11 @@ h1 {
 }
 
 h2 {
+    width: 100%;
     color: black;
-    font-size: 2.5em;
-    font-weight: bolder;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3rem;
+    font-weight: 700;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     margin-bottom: 30px;
 }
 
@@ -96,32 +104,31 @@ h2 {
     margin-bottom: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
 .txt {
     color: rgb(123, 123, 125);
     font-size: 1em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-bottom: 30px;
 }
-
 .box-main {
-
+    justify-content: center;
+    align-items: center;
+    margin: auto;
     margin: 40px 70px; 
-    /* margin: 70px; */
-
     display: grid;
-    grid-template: "img-box-main    empty" /
-        435px 1fr;
+    grid-template:  "empty-left   empty         empty    empty       empty-right" 100px
+                    "empty-left   img-box-main  empty-1  buy-box     empty-right" /
+                     1fr          70px          400px    550px       1fr; 
 }
-
 .img-box-main {
+    grid-area: img-box-main;
     display: grid;
     width: 100%;
-    grid-template: "img-box     img-box       img-box       img-box    img-box      img-box    img-box" 435px
-        "empty-0     empty-0       empty-0       empty-0    empty-0      empty-0    empty-0" 30px
-        "box-img-1   empty-1       box-img-2     empty-2    box-img-3    empty-3    box-img-4" 90px/ 90px 25px 90px 25px 90px 25px 90px
+    grid-template:  "img-box     img-box       img-box       img-box    img-box      img-box    img-box" 450px
+                    "empty-0     empty-0       empty-0       empty-0    empty-0      empty-0    empty-0" 30px
+                    "box-img-1   empty-1       box-img-2     empty-2    box-img-3    empty-3    box-img-4" 90px/ 
+                     96px        20px          96px          20px       96px         20px       96px
 }
-
 .img-box {
     grid-area: img-box;
     width: 100%;
@@ -217,15 +224,18 @@ h2 {
 
 .buy-box {
     margin: 80px 70px;
+    grid-area: buy-box;
 }
 
 .confir-compra {
+    width: 200px;
     margin: 0 15px;
     display: flex;
+    justify-content: center;
     text-align: center;
     background-color: #f07313;
     border-radius: 10px;
-    border: solid 1px black;
+    /* border: solid 1px black; */
     height: 50px;
     box-shadow: 2px 15px 20px #eca976;
 }
@@ -257,16 +267,17 @@ h2 {
     position: fixed;
     top: 0%;
     right: 0;
-    left: 85%;
+    left: 74%;
     border: solid 2px black;
     background-color: #f07313;  
     border-radius: 100%;
     margin-bottom: 1px;
     visibility: hidden;
+    color: rgb(10, 10, 10);
+    font-size: 15px;
+    padding: 3px;
 }
-
 .product-add-activo {
-   
     width: 29px;
     height: 20px;
     background-color: #f07313;
@@ -275,12 +286,7 @@ h2 {
    text-align: center;
 }
 
-#Product-add {
-    color: rgb(10, 10, 10);
-    font-size: 18px;
-    padding: 3px;
 
-}
 
 .lighbox {
     position: fixed;
@@ -310,6 +316,7 @@ h2 {
     color: rgb(24, 24, 24);
     position: relative;
     top: 198px;
+    cursor: pointer;
 }
 
 .ligh-hidden {
@@ -335,7 +342,7 @@ h2 {
     z-index: 400;
     font-size: 1.5em;
     color:#f07313;
-
+    cursor: pointer;
 }
 
 .style-btn {
@@ -386,12 +393,12 @@ h2 {
     display: grid;
     width: 100%;
     grid-template: "img-secundary-1   empty-1       img-secundary-2     empty-2    img-secundary-3    empty-3    img-secundary-4 "20px /
-                    98px               20px          98px                20px       98px               20px       97px;
+                    98px              19px          98px                19px       98px               19px       97px;
 }
 
 .box-radio {
-    width: 102%;
-    height: 100px;
+    width: 103%;
+    height: 99px;
     border: 2px solid rgb(255, 125, 26);
     border-radius: 15px;
 }
