--- a/css/slider.css
+++ b/css/slider.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    overflow: auto;
 }
 
 .main-content{
@@ -11,6 +10,7 @@
                     "empty-left  img-paisaje  empty-right"
                     "empty-left  iconos       empty-right"/
                      1fr         1439px       1fr ;
+    overflow: auto;
 }
 .empty-left{
     grid-area: empty-left;
@@ -58,6 +58,7 @@
     grid-area: img-paisaje;
     z-index: 1;
     left: 0;
+    overflow: hidden;
 }
 .paisaje-1-hidden{
     position: relative;
@@ -73,7 +74,7 @@
     height: 50px;
 }
 .flecha-adelante{
-    color: white;
+    color: black;
     width: 100px;
     font-size: 120px;
     position: relative;
@@ -83,7 +84,7 @@
     cursor: pointer;
 } 
 .flecha-atras{
-    color: white;
+    color: black;
     width: 100px;
     font-size: 120px;
     position: relative;
@@ -92,31 +93,3 @@
     z-index: 2;
     cursor: pointer;
 }
-/* .btn-adelante {
-    left: 100%;
-    z-index: 20;
-    top: 152px
-}
-
-.btn-atras {
-    left: -25px;
-    z-index: 20;
-}
-.btn-style {
-    border-radius: 50%;
-    width: 46px;
-    height: 46px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(24, 24, 24);
-    position: relative;
-    top: 198px;
-    cursor: pointer;
-    z-index: 7;
-}
-.style-btn {
-    font-weight: 900;
-    font-size: 1.3em;
-} */
